* Replace org.reflections by Spring classpath scanning for registering repositories. Relates to #37